--- a/myportfolio/templates/projects/backend.html
+++ b/myportfolio/templates/projects/backend.html
@@ -1,10 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends "projects/base.html" %}
+{% load static %}
+{% block body_block %}
 
-</body>
-</html>
+
+
+{% endblock %}
