--- a/myportfolio/templates/projects/base.html
+++ b/myportfolio/templates/projects/base.html
@@ -22,28 +22,36 @@
 </head>
 
 <body class="loader d-flex flex-column min-vh-100">
-    <nav class="navbar navbar-top fixed-top russo-one-regular" data-bs-theme="dark">
-    <div class="container-fluid">
-        <a class="navbar-brand d-flex align-items-center logotype" href="{% url 'index' %}">
-            <img src="{% static 'images/logos/KikolasDEV_logo.png' %}" alt="Logo KikolasDEV" class="logo-icon me-2">
-            <span>KikolasDEV</span>
-        </a>
-        <ul class="nav justify-content-end">
-            <li class="nav-item">
-                <a class="nav-link" href="#">Sobre mí</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Proyectos</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Conocimientos</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'contact' %}">Contacto</a>
-            </li>
-        </ul>
-    </div>
-</nav>
+    <nav class="navbar navbar-expand-lg navbar-top fixed-top russo-one-regular">
+        <div class="container">
+            <!-- Logo -->
+            <a class="navbar-brand d-flex align-items-center logotype" href="{% url 'index' %}">
+                <img src="{% static 'images/logos/KikolasDEV_logo.png' %}" alt="Logo KikolasDEV" class="logo-icon me-2">
+                <span>KikolasDEV</span>
+            </a>
+            <!-- Botón de hamburguesa (visible solo en móviles) -->
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <!-- Menú de navegación -->
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#sobre-mi">Sobre mí</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#proyectos">Proyectos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#conocimientos-timeline">Conocimientos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'contact' %}">Contacto</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
     <div class="container flex-grow-1">
         {% block body_block %}
