--- a/myportfolio/templates/projects/index.html
+++ b/myportfolio/templates/projects/index.html
@@ -207,7 +207,7 @@
             </div>
 
             <!--<div class="text-center mt-5">
-                <h3 class="text-light">¿Te interesa ver más?</h3>
+                <h3 class="text-light mas-projects">¿Te interesa ver más?</h3>
                 <div class="d-flex justify-content-center gap-5 mt-5">
                     <button class="btn-neon-project backend russo-one-regular">
                         <span></span><span></span><span></span><span></span>
