--- a/myportfolio/templates/projects/base.html
+++ b/myportfolio/templates/projects/base.html
@@ -46,7 +46,7 @@
                         <a class="nav-link" href="#conocimientos-timeline">Conocimientos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'contact' %}">Contacto</a>
+                        <a class="nav-link" href="#contacto">Contacto</a>
                     </li>
                 </ul>
             </div>
@@ -71,16 +71,16 @@
         <div class="footer-links text-start">
             <ul class="nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Sobre mí</a>
+                    <a class="nav-link" href="#sobre-mi">Sobre mí</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Proyectos</a>
+                    <a class="nav-link" href="#proyectos">Proyectos</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Conocimientos</a>
+                    <a class="nav-link" href="#conocimientos-timeline">Conocimientos</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'contact' %}">Contacto</a>
+                    <a class="nav-link" href="#contacto">Contacto</a>
                 </li>
             </ul>
         </div>
