--- a/myportfolio/templates/projects/base.html
+++ b/myportfolio/templates/projects/base.html
@@ -63,6 +63,7 @@
 <script src="{% static 'js/scroll.js' %}"></script>
 <script src="{% static 'js/editor.js' %}"></script>
 <script src="{% static 'js/typing-name.js' %}"></script>
+<script src="{% static 'js/sobre-mi-nav-link.js' %}"></script>
 </body>
 
 <footer class="text-center py-4">
